# Mana-Vault

./: .env  .gitignore  Cargo.toml  README.md
database_sql/: static_data_setup.sql  table_setup.sql
mana_vault_server/: Cargo.toml
mana_vault_server/database_sql/: static_data_setup.sql
mana_vault_server/src/: com.rs  db.rs  main.rs
mana_vault_server/src/com/: response.rs
mana_vault_server/src/db/: scryfall_fetcher.rs
mv_integrated_client/: Cargo.toml
mv_integrated_client/src/: client.rs  main.rs  window.rs
mvtg_card/: Cargo.toml
mvtg_card/src/: card_types.rs  lib.rs  mana_cost.rs  supertypes.rs
notes/: Lesson Notes.txt  Musings on Requests.txt  Roadmap.md  Roadmap.txt
src/: client.rs  com.rs  db.rs  main.rs  model.rs  server.rs  window.rs
src/com/: request.rs
src/db/: scryfall_fetcher.rs
