[package]
name = "Mana-Vault"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.31.1"
rocket = {version = "0.5.1", features = ["json", "http2", "serde_json"]}
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = [ "runtime-tokio", "mysql"]}
tokio = {version = "1.44.2", features = ["macros"]}
